--- a/style.css
+++ b/style.css
@@ -202,7 +202,7 @@ nav img{
   border: 2px solid #fff;
   transition: transform 0.3s ease;
 }
-
+s
 .hero-btn:hover{
   background: #693EB2;
   color: white;
@@ -351,6 +351,7 @@ nav img{
   justify-content: space-between;
   width: 20%;
   padding: 30px;
+  min-width: 10%;
 }
 
 /*----Subsequent pages----*/
@@ -370,6 +371,7 @@ nav img{
   top: 200px;
   text-align: center;
   background-color: transparent;
+  z-index: 1;
 }
 
 #mechanical-page, #electrical-page, #software-page, #business-page{
@@ -379,18 +381,24 @@ nav img{
 
 /*----Team page----*/
 .row {
+  position: relative;
+  left: -1%;
   display: flex;
   justify-content: center;
   align-items: center;
-  gap: 15px; /* Adjust this value for spacing between profiles */
-  padding-bottom: 50px
+  padding-bottom: 50px;
+  flex-wrap: wrap;
+  gap: 15px; 
 }
 
 
 .profile{
-  flex: 1;
+  flex: 1; 
+  margin: 0rem 6rem 2rem 6rem;
   width: 20vh;
   text-align: center;
+  z-index: 0;
+  margin-top: 10px;
 }
 
 .profile h1 {
@@ -408,15 +416,17 @@ nav img{
   max-width: 15rem;
   margin-inline: auto;
   position: relative;
+  min-width: 10rem; 
 }
 
 .person__circle {
   position: absolute;
   inset: auto 0 0;
+  min-width: 5rem;
   aspect-ratio: 1 / 1;
   object-fit: cover;
   width: 100%;
-  margin-inline: auto;
+  //margin-inline: auto;
   border-radius: 50%;
 }
 
@@ -442,7 +452,35 @@ nav img{
   transition: transform 250ms ease-in-out
 }
 
+.teamfooter * {
+  background: transparent;
+  color: white;
+}
 
+.teamfooter {
+  position: absolute;
+
+  text-align: center;
+  width: 100vw;
+  margin-top: 2%;
+  margin: auto;
+  position: center;
+  padding: 10px;
+  border-radius: 10px;
+  background: #4c2a87;
+}
+
+.teamfooter h2 {
+  padding-top: 10px;
+  font-size: 30px;
+  margin: auto;
+}
+
+.teamfooter h3 {
+  padding: 20px;
+  font-size: 20px;
+  margin: auto;
+}
 
 .person__container:hover .person__img{
   transform:  scale(1.5) translateY(-1.5rem)
@@ -1312,6 +1350,15 @@ textarea.form-control{
 
 }
 
+.subteamt{
+  color: white;
+  display: flex;
+  width: auto;
+  height: auto;
+  font-size: 1.4rem;
+  justify-content: center;
+}
+
 .m-card {
   width: 90vw; 
   height: 90vh; 
@@ -1329,7 +1376,7 @@ textarea.form-control{
   z-index: 1000; 
   opacity: 0; 
   visibility: hidden;
-  transition: opacity 0.6s ease, transform 0.6s ease;
+  transition: opacity 0.6s ease-in-out, transform 0.6s ease-in-out;
 }
 
 .m-card.active {
@@ -1425,7 +1472,7 @@ textarea.form-control{
   z-index: 999; /* Ensure it's behind the card but above the rest of the page */
   opacity: 0;
   visibility: hidden;
-  transition: opacity 1s ease;
+  transition: opacity 1s ease-in-out;
 }
 
 .overlay.active {
@@ -1467,6 +1514,11 @@ section {
   width: 70%;
   margin-left: -30%;
   margin-bottom: 10%;
+  transition: transform 0.3s ease-in-out;
+}
+
+.subimages:hover {
+  transform: scale(1.05);
 }
 
 .subimages img {
@@ -1545,6 +1597,14 @@ section {
 
   .subtext-box p {
     font-size: 1em;
+  }
+
+  .sub-header h1{
+    position: relative;
+    font-size: 60px;
+    top: 200px;
+    text-align: center;
+    background-color: transparent;
   }
 }
 
