--- a/Join.css
+++ b/Join.css
@@ -4,7 +4,6 @@
     padding: 0;
     outline: none;
     box-sizing: border-box;
-    font-family: 'Poppins', sans-serif;
   }
   .form{
     display: flex;
@@ -150,7 +149,7 @@
     margin: 0;
     padding: 0;
     background: black;
-    font-family: 'Poppins', sans-serif;
+    font-family: 'Handjet', cursive;
   }
   .header {
     max-width: 100%;
@@ -479,6 +478,8 @@ nav img{
 @media(max-width: 800px){
   .nav-links ul li{
       display: block;
+      font-family: 'Handjet', cursive;
+      font-weight: 5500;
   }
 
   .nav-links{
@@ -491,6 +492,8 @@ nav img{
       text-align: left;
       z-index: 2;
       transition: 1s;
+      font-family: 'Handjet', cursive;
+      font-weight: 5500;
   }
 
   nav .fa{
@@ -499,6 +502,12 @@ nav img{
       margin: 10px;
       font-size: 22px;
       cursor: pointer;
+  }
+
+  .nav-links a{
+    font-family: 'Handjet', cursive;
+    font-weight: 5500;
+    text-decoration: none;
   }
 
   .nav-links ul{
