--- a/Join.css
+++ b/Join.css
@@ -20,6 +20,8 @@
     width: 800px;
     padding: 25px 40px 10px 40px;
     box-shadow: 0px 0px 10px rgba(0,0,0,0.1);
+    margin-top: 150px;
+    margin-bottom: 150px;
   }
   .container .text{
     text-align: center;
