--- a/style.css
+++ b/style.css
@@ -523,7 +523,6 @@ s
 #sciencelead {
 
   transform: scale(1.2);
-  bottom: -20px;
   transition: transform 250ms ease-in-out
 }
 .person__container:hover #sciencelead{
@@ -1663,7 +1662,143 @@ textarea.form-control{
 
 }
 
-.sec-01 {
-  margin-top: 20px !important;
-  padding-top: 0px !important; 
-}
+  .sec-01 {
+    margin-top: 20px !important;
+    padding-top: 0px !important; 
+  }
+
+  .download-div {
+    height: auto;
+    width: auto;
+    display: flex;
+    justify-content: center;
+    margin-top: 50px;
+    margin-bottom: 20px;
+  }
+
+  .download-button {
+    height: auto;
+    width: auto;
+    border: 3px #4c2a87 solid;
+    padding: 10px;
+    border-radius: 10px;
+    background-color: white;
+    color: black;
+    text-decoration: none;
+    font-size: x-large;
+    transition: transform 250ms ease-in-out;
+    transform: scale(1.0);
+  }
+
+  .download-button:hover {
+    transform: scale(1.05)
+  }
+
+  @media (min-width: 1000px){
+    .sponsor-section {
+      height: auto;
+      width: 100%;
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      margin-top: 25px;
+      margin-bottom: 60px;
+  
+    }
+  
+    .xp {
+      height: 300px;
+      width: auto;
+      margin-left: 50px;
+      margin-right: 50px;
+      border-radius: 70px;
+      border: solid;
+      overflow: hidden;
+      border: #fff;
+      background: #fff;
+      transition: transform 250ms ease-in-out;
+      transform: scale(1.0);
+    }
+  
+    .proto {
+      height: 300px;
+      width: auto;
+      margin-left: 50px;
+      margin-right: 50px;
+      border-radius: 70px;
+      border: solid;
+      overflow: hidden;
+      border: #fff;
+      background: #fff;
+      transition: transform 250ms ease-in-out;
+      transform: scale(1.0);
+  
+    }
+  
+    .xp:hover {
+      transition: transform 250ms ease-in-out;
+      transform: scale(1.03)
+    }
+  
+    .proto:hover {
+      transition: transform 250ms ease-in-out;
+      transform: scale(1.03)
+    }
+
+  }
+
+  @media (max-width: 999px) {
+
+    .sponsor-section{
+      height: auto;
+      width: 100%;
+      display: flex;
+      flex-direction: column;
+      justify-content: space-between;
+      align-items: center;
+      margin-top: 25px;
+      margin-bottom: 60px;
+    }
+
+    .xp {
+      height: 300px;
+      width: 600px;
+      margin-top: 20px;
+      margin-bottom: 50px;
+      border-radius: 70px;
+      border: solid;
+      overflow: hidden;
+      border: #fff;
+      background: #fff;
+      transition: transform 250ms ease-in-out;
+      transform: scale(1.0);
+    }
+  
+    .proto {
+      height: 300px;
+      width: 600px;
+      margin-top: 50px;
+      margin-bottom: 20px;
+      border-radius: 70px;
+      border: solid;
+      overflow: hidden;
+      border: #fff;
+      background: #fff;
+      transition: transform 250ms ease-in-out;
+      transform: scale(1.0);
+  
+    }
+  
+    .xp:hover {
+      transition: transform 250ms ease-in-out;
+      transform: scale(1.03)
+    }
+  
+    .proto:hover {
+      transition: transform 250ms ease-in-out;
+      transform: scale(1.03)
+    }
+
+  }
+
+
