--- a/style.css
+++ b/style.css
@@ -1646,6 +1646,8 @@ textarea.form-control{
   color: #555;
   line-height: 1.6;
   background-color: #e0e0de;
+  margin-left: 2%;
+  margin-right: 2%;
 }
 
 .m-card-images {
@@ -1658,7 +1660,7 @@ textarea.form-control{
 }
 
 .m-card-images img {
-  width: 48%; 
+  width: 31%; 
   height: auto; 
   border-radius: 10px;
   box-shadow: 0px 4px 10px rgba(0, 0, 0, 0.1);
